# autoware_mini

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  requirements_cuml.txt  setup.py
config/: carla.yaml  control.yaml  dashboard.yaml  detection.yaml  localization.yaml  planning.yaml  vehicle.yaml  vehicle.yml  vella_extrinsics.yaml
config/carla/: bridge_config.yaml  sensors.json  sensors_minimal.json  sensors_no_cam.json  sensors_no_lidars_and_radars.json  sensors_nvidia.json
config/sfa/: README.md
config/traffic_lights/: tlr_model.onnx
config/vella/: extrinsics.yaml
data/: waypoints_erm_utm_10cm.csv  waypoints_erm_utm_1m.csv
data/bags/: .gitignore
data/lanelet2/: roosi.osm  tartu_demo_l.osm
data/maps/: Town01.osm  Town02.osm  Town06.osm  town03.osm
data/stops/: Delta tasku.bash  Demo_route.bash  Hurda (linna).bash  Hurda (maale).bash  Iie (linna).bash  Iie (maale).bash  Kana-Oleski (linna).bash  Kana-Oleski (maale).bash  Kardla kool (linna).bash  Kardla kool (maale).bash  Kardla tee (linna).bash  Kardla tee (maale).bash  Kivisäki (linna).bash  Kivisäki (maale).bash  Kreutzwaldi (linna).bash  Kreutzwaldi (maale).bash  Kärnise (linna).bash  Kärnise (maale).bash  Külasüda (linna).bash  Külasüda (maale).bash  Maaülikool.bash  Metsamaja (linna).bash  Metsamaja (maale).bash  Mudaniku (linna).bash  Mudaniku (maale).bash  Muide (linna).bash  Muide (maale).bash  Narva_mnt_delta.bash  Narva_mnt_opposite_delta.bash  Raeplats (linna).bash  Raeplats (maale).bash  Rähni (linna).bash  Rähni (maale).bash  Soola (Tasku).bash  Soola_route.bash  Soomeküla (linna).bash  Soomeküla (maale).bash  Spark_route.bash  Tamme (linna).bash  Tamme (maale).bash  (+15 more)
data/trajectories/: waypoints_erm.csv  wp_erm_two_turns.csv  wp_utm_raadi_to_delta.csv
launch/: carla_platform.launch  control.launch  dashboard.launch  detection.launch  localization.launch  localizer.launch  novatel_localizer.launch  novatel_oem7_localizer.launch  planning.launch  simulation.launch  start_bag.launch  start_carla.launch  start_lexus.launch  start_sim.launch  start_waypoint_following.launch  startup_sim.launch  traffic_light_detection.launch  vehicle.launch  waypoint_follower.launch  waypoint_loader.launch  waypoint_saver.launch
launch/detection/: carla_ground_truth_detection.launch  lidar_cluster.launch  lidar_simple.launch  object_detection.launch  (+2 more)
rviz/: autoware_mini.rviz  autoware_mini_carla.rviz  autoware_mini_sim.rviz
(+175 files in other folders)
